tests/integration/snapshots/integration__commands__check__exponent_missing_digits_after_sign.snap
---
source: tests/integration/commands/check.rs
expression: output
---
args: ["check"]
status: 1
success: false
stdin ---
98e+
stdout ---

stderr ---
error: expected digit after exponent indicator, found no significant characters
 --> stdin:1:4
  |
1 | 98e+
  | ---^
  | | |
  | | exponent indicator found here
  | number with exponent found here
  |
help: add a digit after the exponent sign
  |
1 | 98e+0
  |     +
